refactor: ordenar dataframes pela coluna de data em ordem decrescente
Classifica os três dataframes principais, que são apresentados ao usuário, pela coluna de data em ordem decrescente (da mais recente para a mais antiga).

Isso facilita a visualização dos registros mais recentes primeiro, melhorando a experiência do usuário.

--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "d3066fdf",
    "metadata": {},
    "outputs": [],
@@ -32,23 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "id": "bbea2e31",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
-      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "acum = pd.read_excel(bi_abst.cons_64)\n",
-    "caminho = r'c:\\WS_OLIVEIRA\\BASE_DADOS\\BASE_8664\\10 - OUTUBRO 8664.xlsx'\n",
-    "mes_10 = pd.read_excel(caminho)"
+    "PATH_AE = r'c:\\WS_OLIVEIRA\\BASE_DADOS\\1702 - Cadastro de Endereços.txt'\n",
+    "COL_AE = ['COD_END', 'DEP', 'RUA', 'PREDIO', 'NIVEL', 'APTO', 'STATUS', 'ROTATIVO', 'BLOQ', 'DISP', 'PL', 'STR']\n",
+    "ae = pd.read_csv(PATH_AE, header= None, names= COL_AE)\n",
+    "pk_end = pd.DataFrame({\"codigo\": [1,2,3,4,5,6,7,8],\n",
+    "                       \"desc\": ['1-INTEIRO (2,55)','2-INTEIRO(1,90)','3-MEDIO (0,80)', '4-TERCO (0,56)', '5-TERCO (0,46)', '6-PRATELEIRA', '7-MEIO PALETE', '8-INTEIRO(1,35)']})"
    ]
   },
   {
@@ -61,18 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "475285f6",
+   "execution_count": null,
+   "id": "ae91b3f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mes_10['DATAGERACAO'] = pd.to_datetime(mes_10['DATAGERACAO']).dt.normalize()\n",
-    "mes_10['MES'] = mes_10['DATAGERACAO'].dt.month\n",
-    "mes_10 = mes_10[['DATAGERACAO', 'DTLANC', 'NUMBONUS', 'NUMOS', 'CODEMPILHADOR','EMPILHADOR', 'MES']].copy()\n",
-    "mes_10 = mes_10.drop_duplicates(subset=['NUMOS'])\n",
     "\n",
-    "novo_ciclo = pd.concat([acum, mes_10], ignore_index= True)\n",
-    "novo_ciclo = novo_ciclo.loc[novo_ciclo['MES'].astype(float) > 0]"
+    "df_aereos = ae.merge(pk_end, left_on='PL', right_on= 'codigo', how='left').drop(columns=['codigo', ])\n",
+    "\n",
+    "maior_pd = df_aereos.groupby([df_aereos['RUA'].astype(str) +\"-\"+ df_aereos['PREDIO'].astype(str)])['NIVEL'].max().reset_index()\n",
+    "maior_pd.columns = ['CONCAT', 'maior_nivel']\n",
+    "df_aereos['CONCAT'] = df_aereos['RUA'].astype(str) +\"-\"+ df_aereos['PREDIO'].astype(str)\n",
+    "df_aereos = df_aereos.merge(maior_pd, left_on= 'CONCAT', right_on= 'CONCAT', how= 'left')\n",
+    "\n",
+    "df_aereos['VALIDAR'] = np.where(df_aereos['maior_nivel'] == df_aereos['NIVEL'], \n",
+    "                                np.where(df_aereos['desc'] != '8-INTEIRO(1,35)', \"incorreto\", \"correto\"),\n",
+    "                                np.where(df_aereos['desc'] == '8-INTEIRO(1,35)', \"incorreto\", \"correto\")\n",
+    ")\n"
    ]
   },
   {
@@ -85,19 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "f8a7890b",
+   "execution_count": 70,
+   "id": "f709b86d",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['MES', 'qtde'], dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -119,59 +108,267 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>MES</th>\n",
-       "      <th>qtde</th>\n",
+       "      <th>COD_END</th>\n",
+       "      <th>DEP</th>\n",
+       "      <th>RUA</th>\n",
+       "      <th>PREDIO</th>\n",
+       "      <th>NIVEL</th>\n",
+       "      <th>APTO</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>ROTATIVO</th>\n",
+       "      <th>BLOQ</th>\n",
+       "      <th>DISP</th>\n",
+       "      <th>PL</th>\n",
+       "      <th>STR</th>\n",
+       "      <th>desc</th>\n",
+       "      <th>CONCAT</th>\n",
+       "      <th>maior_nivel</th>\n",
+       "      <th>VALIDAR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>11.0</td>\n",
-       "      <td>414</td>\n",
+       "      <th>15116</th>\n",
+       "      <td>1036089</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>301</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>OCUPADO</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8-INTEIRO(1,35)</td>\n",
+       "      <td>23-2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>43812</td>\n",
+       "      <th>15117</th>\n",
+       "      <td>1036090</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>302</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>OCUPADO</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8-INTEIRO(1,35)</td>\n",
+       "      <td>23-2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>29086</td>\n",
+       "      <th>15118</th>\n",
+       "      <td>1039647</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>401</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>OCUPADO</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8-INTEIRO(1,35)</td>\n",
+       "      <td>23-2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>27556</td>\n",
+       "      <th>15119</th>\n",
+       "      <td>1039648</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>402</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>OCUPADO</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8-INTEIRO(1,35)</td>\n",
+       "      <td>23-2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>37137</td>\n",
+       "      <th>15130</th>\n",
+       "      <td>1034315</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>201</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>OCUPADO</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8-INTEIRO(1,35)</td>\n",
+       "      <td>23-4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>incorreto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>29194</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>37527</td>\n",
+       "      <th>29827</th>\n",
+       "      <td>1063920</td>\n",
+       "      <td>1</td>\n",
+       "      <td>202</td>\n",
+       "      <td>22</td>\n",
+       "      <td>5</td>\n",
+       "      <td>502</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>LIVRE</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2-INTEIRO(1,90)</td>\n",
+       "      <td>202-22</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29834</th>\n",
+       "      <td>1063921</td>\n",
+       "      <td>1</td>\n",
+       "      <td>202</td>\n",
+       "      <td>23</td>\n",
+       "      <td>5</td>\n",
+       "      <td>501</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>LIVRE</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2-INTEIRO(1,90)</td>\n",
+       "      <td>202-23</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29841</th>\n",
+       "      <td>1063924</td>\n",
+       "      <td>1</td>\n",
+       "      <td>202</td>\n",
+       "      <td>24</td>\n",
+       "      <td>5</td>\n",
+       "      <td>502</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>LIVRE</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2-INTEIRO(1,90)</td>\n",
+       "      <td>202-24</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29842</th>\n",
+       "      <td>1063935</td>\n",
+       "      <td>1</td>\n",
+       "      <td>202</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>501</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>LIVRE</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3-MEDIO (0,80)</td>\n",
+       "      <td>202-30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29843</th>\n",
+       "      <td>1063936</td>\n",
+       "      <td>1</td>\n",
+       "      <td>202</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>502</td>\n",
+       "      <td>PULMÃO</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>LIVRE</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3-MEDIO (0,80)</td>\n",
+       "      <td>202-30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>incorreto</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2490 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    MES   qtde\n",
-       "6  11.0    414\n",
-       "5  10.0  43812\n",
-       "4   9.0  29086\n",
-       "3   8.0  27556\n",
-       "2   7.0  37137\n",
-       "1   6.0  29194\n",
-       "0   5.0  37527"
+       "       COD_END  DEP  RUA  PREDIO  NIVEL  APTO  STATUS ROTATIVO BLOQ     DISP  \\\n",
+       "15116  1036089    1   23       2      3   301  PULMÃO        N  NÃO  OCUPADO   \n",
+       "15117  1036090    1   23       2      3   302  PULMÃO        N  NÃO  OCUPADO   \n",
+       "15118  1039647    1   23       2      4   401  PULMÃO        N  NÃO  OCUPADO   \n",
+       "15119  1039648    1   23       2      4   402  PULMÃO        N  NÃO  OCUPADO   \n",
+       "15130  1034315    1   23       4      2   201  PULMÃO        N  NÃO  OCUPADO   \n",
+       "...        ...  ...  ...     ...    ...   ...     ...      ...  ...      ...   \n",
+       "29827  1063920    1  202      22      5   502  PULMÃO        N  NÃO    LIVRE   \n",
+       "29834  1063921    1  202      23      5   501  PULMÃO        N  NÃO    LIVRE   \n",
+       "29841  1063924    1  202      24      5   502  PULMÃO        N  NÃO    LIVRE   \n",
+       "29842  1063935    1  202      30      5   501  PULMÃO        N  NÃO    LIVRE   \n",
+       "29843  1063936    1  202      30      5   502  PULMÃO        N  NÃO    LIVRE   \n",
+       "\n",
+       "       PL  STR             desc  CONCAT  maior_nivel    VALIDAR  \n",
+       "15116   8    1  8-INTEIRO(1,35)    23-2            5  incorreto  \n",
+       "15117   8    1  8-INTEIRO(1,35)    23-2            5  incorreto  \n",
+       "15118   8    1  8-INTEIRO(1,35)    23-2            5  incorreto  \n",
+       "15119   8    1  8-INTEIRO(1,35)    23-2            5  incorreto  \n",
+       "15130   8    1  8-INTEIRO(1,35)    23-4            6  incorreto  \n",
+       "...    ..  ...              ...     ...          ...        ...  \n",
+       "29827   2    1  2-INTEIRO(1,90)  202-22            5  incorreto  \n",
+       "29834   2    1  2-INTEIRO(1,90)  202-23            5  incorreto  \n",
+       "29841   2    1  2-INTEIRO(1,90)  202-24            5  incorreto  \n",
+       "29842   3    1   3-MEDIO (0,80)  202-30            5  incorreto  \n",
+       "29843   3    1   3-MEDIO (0,80)  202-30            5  incorreto  \n",
+       "\n",
+       "[2490 rows x 16 columns]"
       ]
      },
      "metadata": {},
@@ -179,21 +376,19 @@
     }
    ],
    "source": [
-    "grupo = novo_ciclo.groupby('MES').agg(\n",
-    "    qtde = ('MES', 'count')\n",
-    ").reset_index()\n",
-    "display(grupo.columns)\n",
-    "display(grupo.sort_values(by='MES', ascending= False))"
+    "display(df_aereos.loc[df_aereos['VALIDAR'] == 'incorreto'])\n",
+    "retur = df_aereos.loc[(df_aereos['VALIDAR'] == 'incorreto') & (~df_aereos['RUA'].isin([23,24,25]))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "7e918875",
+   "execution_count": 71,
+   "id": "f4e2c996",
    "metadata": {},
    "outputs": [],
    "source": [
-    "novo_ciclo.to_excel(bi_abst.cons_64, index= False, sheet_name= '8664')"
+    "retorno = r'c:\\WS_OLIVEIRA\\RESULTADO.xlsx'\n",
+    "retur.to_excel(retorno,index= False, sheet_name= 'retorno')"
    ]
   }
  ],
@@ -213,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
